tests/snapshots/run_wpt_conformance__litert_neg_float32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "neg.https.any.js",
    "neg float32 1D tensor",
    "litert",
    "PASS",
)
