tests/snapshots/run_wpt_conformance__litert_neg_int8_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "neg.https.any.js",
    "neg int8 4D tensor",
    "litert",
    "PASS",
)
